--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
   "name": "@alicization-hub/db-schema",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Shared database schema using DrizzleORM",
-  "main": "drizzle/main.ts",
-  "types": "types/index.d.ts",
+  "main": "index.ts",
+  "types": "index.ts",
+  "exports": {
+    ".": {
+      "import": "./index.ts",
+      "require": "./index.ts",
+      "types": "./index.ts"
+    }
+  },
+  "files": [
+    "drizzle/",
+    "types/",
+    "index.ts"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alicization-hub/db-schema.git"
