--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,19 +4,17 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "declaration": true,
+    "emitDeclarationOnly": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
     "incremental": true,
     "isolatedModules": true,
-    "jsx": "preserve",
     "lib": [
-      "ESNext",
-      "DOM",
-      "DOM.Iterable"
+      "ESNext"
     ],
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
     "noEmit": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
@@ -28,7 +26,6 @@
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx"
   ],
   "exclude": [
     "node_modules"
