--- a/package.json
+++ b/package.json
@@ -2,19 +2,17 @@
   "name": "@alicization-hub/db-schema",
   "version": "0.1.3",
   "description": "Shared database schema using DrizzleORM",
-  "main": "index.ts",
-  "types": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./index.ts",
-      "require": "./index.ts",
-      "types": "./index.ts"
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "files": [
-    "drizzle/",
-    "types/",
-    "index.ts"
+    "dist"
   ],
   "repository": {
     "type": "git",
