--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
       "import": "./dist/index.js",
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
+    },
+    "./types": {
+      "types": "./dist/global.d.ts"
     }
   },
   "files": [
