--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "@alicization-hub/db-schema",
   "version": "0.1.10",
   "description": "Shared database schema using DrizzleORM",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./src/index.ts",
-      "require": "./src/index.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
