Fix: exports global-types

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alicization-hub/db-schema",
-  "version": "0.1.14",
+  "version": "0.1.15",
   "description": "Shared database schema using DrizzleORM",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,7 @@
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
-    "./types": {
+    "./global-types": {
       "types": "./dist/global.d.ts"
     }
   },
